archetect-minijinja/tests/snapshots/test_templates__vm@loop_else.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{% for item in seq %}\n  should not happen\n{% else %}\n  else block!\n{% endfor %}"
info:
  seq: []
input_file: archetect_minijinja/tests/inputs/loop_else.txt
---

  else block!


