archetect-minijinja/tests/snapshots/test_templates__vm@loop_over_undefined.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "[{% for item in seq %}{% endfor %}]"
info: {}
input_file: archetect_minijinja/tests/inputs/loop_over_undefined.txt
---
[]

