archetect-minijinja/tests/snapshots/test_templates__vm@macro_calling_macro.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{%- from \"call_macro.txt\" import call %}\n{%- macro my_macro(value) %}[{{ value }}]{% endmacro %}\n{{- call(my_macro, 42) }}"
info: {}
input_file: archetect_minijinja/tests/inputs/macro_calling_macro.txt
---
[42]

